# richard-atp-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: clausifier.cpp.9FD5A8E503FCC1D9.idx  discrim_tree.cpp.E42DE863D5277544.idx  main.cpp.E859CA8999ADDE12.idx  proof_trace.cpp.1C59D7C4E2AA6F75.idx  prover.cpp.3C0A611D8081F4D2.idx  resolution.cpp.DB2A5A3C44A70C4B.idx  subsumption.cpp.6D5F5B98AE9124E8.idx  symbol_table.cpp.685747B6B16C64EF.idx  term_bank.cpp.943AA1306E763CC8.idx  test_clausifier.cpp.FF3EDB07B9DFBBC1.idx  test_discrim_tree.cpp.9508FB8B5A477D10.idx  test_prover.cpp.604919AAC374F32C.idx  test_resolution.cpp.E785AA54A14F55A5.idx  test_term_bank.cpp.50AF7E4F3359B770.idx  test_unification.cpp.BA63AEE14AACBCCC.idx  tptp_parser.cpp.50E69F3F47D54605.idx  unification.cpp.FAE8F2832CAC7DB0.idx
data/: monkey_banana.p  simple_propositional.p
docs/: architecture.md
include/atp/core/: clause.h  clause_store.h  literal.h  symbol_table.h  term.h  term_bank.h  types.h
include/atp/frontend/: tptp_parser.h
include/atp/index/: discrim_tree.h
include/atp/infer/: resolution.h  substitution.h  unification.h
include/atp/normalize/: clausifier.h  formula.h
include/atp/proof/: proof_trace.h
include/atp/rewrite/: ordering.h  paramodulation.h
include/atp/search/: clause_queue.h  prover.h
include/atp/simplify/: subsumption.h  tautology.h
include/atp/strategy/: calculus.h  inference_rule.h  problem_analyzer.h
include/atp/utils/: hash_utils.h  logger.h
src/: main.cc
src/core/: clause_store.cc  symbol_table.cc  term_bank.cc
src/frontend/: tptp_parser.cc
src/infer/: resolution.cc  substitution.cc  unification.cc
src/proof/: proof_trace.cc
src/rewrite/: paramodulation.cc
src/search/: prover.cc
src/simplify/: subsumption.cc  tautology.cc
tests/: CMakeLists.txt  test_clausifier.cc  test_end_to_end.cc  test_proof_trace.cc  test_prover.cc  test_resolution.cc  test_simplify.cc  test_term_bank.cc  test_unification.cc
